# AI-powered-Academic-Advising-System

./: .gitignore  README.md
Old-Training-Approch/: .env.example  .gitignore  README.md  pyproject.toml
Old-Training-Approch/configs/: distill.yaml  eval.yaml
Old-Training-Approch/docker/: Dockerfile.serve  Dockerfile.train
Old-Training-Approch/scripts/: evaluate.sh  prepare_data.sh  serve.sh  train.sh
Old-Training-Approch/src/advisor/: __init__.py
Old-Training-Approch/src/advisor/data/: __init__.py  cleaner.py  loader.py  schema.py
Old-Training-Approch/src/advisor/distillation/: __init__.py  losses.py  trainer.py
Old-Training-Approch/src/advisor/evaluation/: __init__.py  metrics.py  runner.py
Old-Training-Approch/src/advisor/serving/: __init__.py  app.py
Old-Training-Approch/tests/: conftest.py  test_cleaner.py  test_loader.py  test_losses.py  test_metrics.py  test_schema.py
backend/: .env.example  auth_router.py  calendar_router.py  main.py  requirements.txt  ultimate_rag_system.py
database/: database_migration.sql  university_reviews.sql  university_reviews_schema_v2.sql
frontend/: eslint.config.js  index.html  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: api.js
frontend/src/components/: AuthBackground.jsx  ChatInput.jsx  ChatMessage.jsx  ChatSidebar.jsx  DashboardLayout.jsx  ErrorBoundary.jsx  ProtectedRoute.jsx  UIModal.jsx
frontend/src/context/: AuthContext.jsx  I18nContext.jsx
frontend/src/locales/: ar.json  en.json
frontend/src/pages/: Calendar.jsx  Chats.jsx  ForgotPassword.jsx  Login.jsx  (+5 more)
(+6 files in other folders)
